--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -50,7 +50,7 @@
     "loc = os.path.abspath('')\n",
     "src_file = loc+'/inputs/625_201708101101.mp4'\n",
     "tracked_blobs = []\n",
-    "tracked_conts = []\n",
+    "track_contour = []\n",
     "ret_array = []\n",
     "\n",
     "\n",
@@ -374,7 +374,7 @@
     "                        width = w,\n",
     "                        height = h\n",
     "                        )\n",
-    "            tracked_conts.append(c)\n",
+    "            track_contour.append(c)\n",
     "            \n",
     "            cv2.rectangle(frame, (x, y), (x + w - 1, y + h - 1), (50,205,50), 2)\n",
     "            cv2.circle(frame, centroid, 2, (255, 0, 255), -1)\n",
@@ -407,7 +407,7 @@
     "        break\n",
     "# print(car_counter.vehicle_RHS)\n",
     "# print(tracked_blobs)\n",
-    "# print(tracked_conts)\n",
+    "# print(track_contour)\n",
     "cv2.destroyAllWindows()\n",
     "cap.release()\n",
     "\n",
